clusters/seaweedfs-cluster/test-app/volume-tester-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: volume-tester
spec: {}
status: {}
