clusters/seaweedfs-cluster/test-app/test-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-app
  name: test-app
  namespace: test-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-app
  strategy: {}
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - image: test:1.0.0
        name: test
        imagePullPolicy: Never
        volumeMounts:
          - name: data-volume
            mountPath: /data
        resources: {}
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: test-app-claim
status: {}
