clusters/seaweedfs-cluster/test-app/volume-tester-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: volume-tester
  name: volume-tester
spec:
  replicas: 3
  selector:
    matchLabels:
      app: volume-tester
  strategy: {}
  template:
    metadata:
      labels:
        app: volume-tester
    spec:
      containers:
      - image: test:1.0.0
        name: test
        imagePullPolicy: Never
        volumeMounts:
          - name: data-volume
            mountPath: /data
        resources: {}
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: volume-tester-claim
status: {}
